# libc_override

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  scanf_percent_m_hybrid.md
cmake/: alloc_return_override.map  alloc_return_override_ohos.map  mock_allocator.map  mock_allocator_ohos.map  run_ohos_test.cmake
include/: allocator_bridge.h  mock_allocator_test_api.h
src/: common.h  dirent_overrides.c  helpers.c  line_overrides.c  memstream_overrides.c  mock_allocator.c  path_overrides.c  scanf_overrides.c  sched_overrides.c  stdio_overrides.c  string_overrides.c
tests/: phase1a_mock_only.c  phase1a_smoke.c  phase1a_validation.c  test_support.h
